--- a/style.css
+++ b/style.css
@@ -1,21 +1,86 @@
 #body {
     background-color: white;
     display: grid;
-    grid-template-columns: 3;
+    grid-template-columns: 1fr 1.2fr 1fr;
     grid-auto-rows: 0.5fr;
 }
 
+.header {
+    grid-column: 3/4;
+}
+
+#navbar {
+    font-size: 10pt;
+    font-family: Arial, Helvetica, sans-serif;
+    color: gray;
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    vertical-align: middle;
+    margin-right: 5px;
+    gap: 13px;
+    line-height: 40px;
+    justify-content: flex-end;
+    grid-column: 3/4;
+}
+
+#profile-pic {
+    border-radius: 50%;
+    width: 32px;
+}
+
 #google-logo {
-    grid-column: 2; 
-    grid-row: 5;
+    grid-column: 2/3;
+    grid-row: 4;
+}
+/*
+The google picture
+*/
+
+#google-logo-img {
+    width: 100%;
+    height: 90%
 }
 
 #search-box {
-    grid-column: 2;
-    grid-row: 6;
+    grid-column: 2/3;
+    grid-row: 5;
+    display: block;
 }
+/*
+The entire search-box div
+*/
 
 #search-box input {
-    width: 260px;
-    border-width: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    font-stretch: 100%;
+    width: 100%;
+    border-width: 1px;
+    align-self: flex-end;
+    height: 44px;
+    border-radius: 100px;
+    display: inline-block;
+    padding-bottom: 1px;
+    padding-inline-end: 44px;
+    padding-inline-start: 52px;
+}
+
+
+
+/*
+This is the box around the search bar element
+*/
+
+#search-icon {
+    position: absolute;
+    margin: 10px;
+    width: 32px;
+}
+
+#mic-icon {
+    position: absolute;
+    margin-top: 9px;
+    margin-left: -40px;
+    width: 32px;
 }
