--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ The google picture
 }
 
 #search-box {
-    grid-column: 2/3;
+    grid-column: 2;
     grid-row: 5;
     display: block;
 }
@@ -65,8 +65,6 @@ The entire search-box div
     padding-inline-end: 44px;
     padding-inline-start: 52px;
 }
-
-
 
 /*
 This is the box around the search bar element
